--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 .box {
     font-family: 'Roboto', sans-serif;
-    height: 70px;
-    font-size: 50px;
+    font-size: 100px;
     color: white;
     text-align: center;
-    padding: 30px;
+    padding: 10px;
+    box-sizing: border-box;
+    font-weight: 300;
+    width: 300px;
 }
 
 .box-1 {background-color: #F44336;}
