--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     padding: 10px;
     box-sizing: border-box;
     font-weight: 300;
-    width: 100px;
+    width: 300px;
 }
 
 .box-1 {background-color: #F44336;}
@@ -23,6 +23,10 @@
 .container {
     display: flex;
     border: 10px solid black;
-    height: 800px;
-    
+    height: 100vh;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    align-content: space-between;
+    justify-content: center;
+
 }
